Fix iPhone layout on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -66,18 +66,14 @@
 }
 
 .iPhone {
-  z-index: 1;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-flex-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: center;
-  justify-content: center;
+  position: relative;
+}
+
+.iPhone-media {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (min-width: 960px) {
